<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whatever_your_choice_was_we_could_do_better_we_want_to_know">whatever your choice was, we could do better we want to know</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="text">Text</string>
    <string name="number">Number</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="postal_code">Postal Code</string>
    <string name="url">URL</string>
    <string name="please_enter_valid_text">please enter valid Text</string>
    <string name="please_enter_valid_number">Please Enter Valid Number</string>
    <string name="please_enter_valid_url">Please Enter a valid URL that ends with \".com\" or \".net\" …etc</string>
    <string name="please_enter_valid_postal_code">Please Enter a valid postal code (numbers only) Like \'XXXXX\'</string>
    <string name="please_enter_valid_telephone">Phone number include country code must be between 9 to 15 digits limit user to enter more than 15</string>
    <string name="please_enter_valid_email">Please Enter a valid mail in this format xx@xxx.xxx</string>
    <string name="required">(Required)</string>
    <string name="please_answer_this_question">Please Answer this question</string>
    <string name="take_survey">Take Survey</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="not_likely">Not likely</string>
    <string name="extremely_likely">Extremely likely</string>
    <string name="very_difficult">Very Difficult</string>
    <string name="very_easy">Very Easy</string>
    <string name="very_dissatisfied">Very Dissatisfied</string>
    <string name="very_satisfied">Very satisfied</string>
    <string name="please_enter_your_answer">please enter your answer</string>
    <string name="prev">Prev</string>
</resources>