<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_22sdp">

    <TextView
        android:id="@+id/npsQuestionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/whatever_your_choice_was_we_could_do_better_we_want_to_know"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/npsQuestionTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/npsQuestionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="start"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/npsQuestionDescription"
        tools:text="Ahmed Medhat Mohamed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/npsQuestionsNumbersContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/npsQuestionTitle"
        app:layout_constraintTop_toBottomOf="@id/npsQuestionTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/npsQuestion5Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/npsQuestions5NumbersContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/npsQuestion5_1"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/pink"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion5_2"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/mustard"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion5_3"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/yellow"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion5_4"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/lemon_green"
                    android:gravity="center"
                    android:text="@string/_4"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion5_5"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/dark_green"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/not_likely"
                android:textColor="@color/light_pink"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintStart_toStartOf="@id/npsQuestions5NumbersContainer"
                app:layout_constraintTop_toBottomOf="@id/npsQuestions5NumbersContainer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:text="@string/extremely_likely"
                android:textColor="@color/dark_green"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintEnd_toEndOf="@id/npsQuestions5NumbersContainer"
                app:layout_constraintTop_toBottomOf="@id/npsQuestions5NumbersContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/npsQuestion10Container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/npsQuestion10LeftText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_likely"
                android:textColor="@color/light_pink"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/npsQuestion10RightText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/extremely_likely"
                android:textColor="@color/dark_green"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/npsQuestions10NumbersContainerFirstRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/npsQuestion10LeftText">

                <TextView
                    android:id="@+id/npsQuestion10_0"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/red"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_1"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/pink"
                    android:gravity="center"
                    android:text="@string/_1"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_2"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/dark_orange"
                    android:gravity="center"
                    android:text="@string/_2"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_3"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/light_orange"
                    android:gravity="center"
                    android:text="@string/_3"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_4"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/light_orange"
                    android:gravity="center"
                    android:text="@string/_4"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_5"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/yellow"
                    android:gravity="center"
                    android:text="@string/_5"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/npsQuestions10NumbersContainerSecondRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/npsQuestions10NumbersContainerFirstRow">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_6"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/lemon"
                    android:gravity="center"
                    android:text="@string/_6"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_7"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/lemon_green"
                    android:gravity="center"
                    android:text="@string/_7"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_8"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/light_green"
                    android:gravity="center"
                    android:text="@string/_8"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_9"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/green"
                    android:gravity="center"
                    android:text="@string/_9"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/npsQuestion10_10"
                    android:layout_width="@dimen/_32sdp"
                    android:layout_height="@dimen/_32sdp"
                    android:animateLayoutChanges="true"
                    android:background="@drawable/circle_background"
                    android:backgroundTint="@color/dark_green"
                    android:gravity="center"
                    android:text="@string/_10"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_14ssp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/npsQuestionErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/please_answer_this_question"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/npsQuestionsNumbersContainer"
        app:layout_constraintTop_toBottomOf="@id/npsQuestionsNumbersContainer" />
</androidx.constraintlayout.widget.ConstraintLayout>