<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_22sdp">

    <TextView
        android:id="@+id/emojiQuestionTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="start"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Ahmed Medhat Mohamed" />

    <TextView
        android:id="@+id/emojiQuestionDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_14sdp"
        android:gravity="center"
        android:text="@string/whatever_your_choice_was_we_could_do_better_we_want_to_know"
        android:textColor="@color/dark_gray"
        android:textSize="@dimen/_14ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emojiQuestionTitle" />

    <TextView
        android:id="@+id/emojiQuestionRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/required"
        android:textColor="@color/fade_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emojiQuestionDescription" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emojiQuestionEmojiContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        app:layout_constraintTop_toBottomOf="@id/emojiQuestionRequired">

        <LinearLayout
            android:id="@+id/emojiQuestionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:id="@+id/emojiQuestionFrontSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emojiQuestionAngryEmoji"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:animateLayoutChanges="true"
                android:src="@drawable/ic_classic_angry" />

            <View
                android:id="@+id/emojiQuestionFirstSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emojiQuestionFrownEmoji"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:animateLayoutChanges="true"
                android:src="@drawable/ic_classic_frown" />

            <View
                android:id="@+id/emojiQuestionSecondSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emojiQuestionNeutralEmoji"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:animateLayoutChanges="true"
                android:src="@drawable/ic_classic_neutral" />

            <View
                android:id="@+id/emojiQuestionThirdSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emojiQuestionSmileEmoji"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:animateLayoutChanges="true"
                android:src="@drawable/ic_classic_smile" />

            <View
                android:id="@+id/emojiQuestionFourthSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/emojiQuestionHappyEmoji"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:animateLayoutChanges="true"
                android:src="@drawable/ic_classic_happy" />

            <View
                android:id="@+id/emojiQuestionLastSpace"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/emojiQuestionErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/please_answer_this_question"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/emojiQuestionEmojiContainer"
        app:layout_constraintTop_toBottomOf="@id/emojiQuestionEmojiContainer" />

</androidx.constraintlayout.widget.ConstraintLayout>